aaservices/templates/ingress/aas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /aaservices/$2
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - <AAS_URL>
    secretName: <AAS_URL_SECRET>
  rules:
  - host: <AAS_URL>  
    http:
      paths:
        - path: /aaservices(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: aas
              port:
                number: 8079
